--- a/location/package.json
+++ b/location/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.22.2",
     "mongoose": "^5.3.10",
     "morgan": "^1.9.1",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "underscore": "^1.9.1"
   }
 }
