reconfig due to uninstall vs change "intelliSenseMode": "msvc-x64",  to "gcc-x64", and  update "includePath"

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
         "limits": "cpp"
-    }
+    },
+    "C_Cpp.intelliSenseEngineFallback": "Disabled",
+    "C_Cpp.errorSquiggles": "Disabled"
 }
